# comic_order

./: .gitignore  Cargo.toml  README.md  build.cmd  check_errors.txt  genera_exe.cmd
src/: comic_reader.rs  db.rs  main.rs  qr.rs  server.rs
src/ui/: collection_editor.rs  comic_grid.rs  metadata_editor.rs  mod.rs  reader.rs  sidebar.rs  trusted_devices.rs
